# studyctl

./: .gitignore  README.md  pyproject.toml
src/studyctl/: main.py
